2008-09-02  Jonathan Gonzalez V.  <zeus@gnu.org>

	* postgres-functions.c (FiFo): Fixed bug. Replaced %d for a proper %s.

2008-09-01  Jonathan Gonzalez V.  <zeus@lunareja>

	* credito.c (search_client): Fixed bug reported by Victor.

2008-08-19  Jonathan Gonzalez V.  <zeus@gnu.org>

	* postgres-functions.c (SearchTuplesByDate): Added a condition to
	avoid null sales.

2008-08-18  Jonathan Gonzalez V.  <zeus@gnu.org>

	* postgres-functions.c (FiFo): Changed to use the plpgsql function
	calculate_fifo.

2008-08-13  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c (on_btn_add_new_product_clicked): Added the proper
	check looking for repeated short code and barcode.

2008-08-07  Jonathan Gonzalez V.  <zeus@gnu.org>

	* rizoma-config.c (create_config): Changed the default profile
	from DEFAULT to RIZOMA.

	* ventas.c (nullify_sale_win): Set to selection none the tree view
	with the details of a sale.

	* rizoma_informes.c (reports_win): Removed the max width to
	columns on tree_view_sell_rank tree view.
	(reports_win): Added the proper symbol at the end of every column
	to show if they are money or percent numbers.
	(fill_caja_data): Added payed cash to the cash box report.

	* administracion_productos.c (admini_box): Changed the column type
	stock from INT to DOUBLE.

2008-08-06  Jonathan Gonzalez V.  <zeus@gnu.org>

	* ventas.c (on_btn_nullify_search_clicked): Modified the query
	that gets the sales to nullify.
	(on_btn_nullify_ok_clicked): Fixed some minor bugs.
	(on_selection_nullify_sales_change): Removed condition that was
	asking for the id_detail on venta_anulada.

	* manejo_productos.c (ListClean): Fixed to not pass anything when
	venta->header is a null pointer.

	* ventas.c (on_btn_nullify_ok_clicked): Modified to deal with the
	new nullify concept.

	* postgres-functions.c (nullify_sale): Modified to accept only one
	argument, the sale id.

	* ventas.c (nullify_sale_datail): Deleted function.

2008-07-29  Jonathan Gonzalez V.  <zeus@lunareja.lunareja>
